@@ -77,9 +77,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
                 <configuration>
-                    <source>21</source>
-                    <target>21</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
+                    <release>${maven.compiler.release}</release>
                 </configuration>
             </plugin>
         </plugins>
